--- a/Pictation/Base.lproj/Main.storyboard
+++ b/Pictation/Base.lproj/Main.storyboard
@@ -45,25 +45,100 @@
                                 <rect key="frame" x="124" y="292" width="127" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Intermediate Level"/>
+                                <connections>
+                                    <segue destination="k9T-gN-1uI" kind="show" id="g1b-8M-gw0"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qKB-IN-Dbv">
                                 <rect key="frame" x="133" y="441" width="108" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Advanced Level"/>
+                                <connections>
+                                    <segue destination="k9T-gN-1uI" kind="show" id="HXf-Au-mBU"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Hg-sG-NKd">
-                                <rect key="frame" x="137" y="132" width="101" height="30"/>
+                                <rect key="frame" x="137" y="132" width="101" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Beginner Level"/>
+                                <connections>
+                                    <segue destination="k9T-gN-1uI" kind="show" identifier="toBeginnerSegue" id="dW3-IL-hrE"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y5O-M6-ksl">
+                                <rect key="frame" x="15" y="35" width="39" height="30"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="segueBackToViewController" id="889-bk-pOP"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Y5O-M6-ksl" firstAttribute="leading" secondItem="Z7x-hU-lnn" secondAttribute="leading" constant="15" id="iDs-VM-Ohr"/>
+                            <constraint firstItem="Z7x-hU-lnn" firstAttribute="trailing" secondItem="Y5O-M6-ksl" secondAttribute="trailing" constant="321" id="rig-ut-qfk"/>
+                            <constraint firstItem="Y5O-M6-ksl" firstAttribute="top" secondItem="Z7x-hU-lnn" secondAttribute="top" constant="15" id="sUC-PC-7aJ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Z7x-hU-lnn"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YWi-w6-Mxu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1374" y="132"/>
+            <point key="canvasLocation" x="1373.5999999999999" y="131.78410794602701"/>
+        </scene>
+        <!--Beginner Level View Controller-->
+        <scene sceneID="w32-zs-sxK">
+            <objects>
+                <viewController id="k9T-gN-1uI" customClass="BeginnerLevelViewController" customModule="Pictation" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UWa-hS-7WV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cfO-w8-SvC">
+                                <rect key="frame" x="305" y="107" width="50" height="30"/>
+                                <state key="normal" title="Restart"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uQ3-D8-2U9">
+                                <rect key="frame" x="317" y="63" width="38" height="30"/>
+                                <state key="normal" title="Undo"/>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GH1-R8-VeX">
+                                <rect key="frame" x="139" y="20" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wzb-Tn-Oo9">
+                                <rect key="frame" x="15" y="35" width="39" height="30"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="XeY-gh-sji" kind="show" id="wEj-nK-EeJ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="cfO-w8-SvC" firstAttribute="top" secondItem="uQ3-D8-2U9" secondAttribute="bottom" constant="14" id="0ba-fZ-8Q4"/>
+                            <constraint firstItem="eG5-jY-ANL" firstAttribute="bottom" secondItem="cfO-w8-SvC" secondAttribute="bottom" constant="530" id="2uj-bx-rbm"/>
+                            <constraint firstItem="uQ3-D8-2U9" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="UWa-hS-7WV" secondAttribute="leading" constant="20" symbolic="YES" id="9ip-7V-07o"/>
+                            <constraint firstItem="wzb-Tn-Oo9" firstAttribute="top" secondItem="eG5-jY-ANL" secondAttribute="top" constant="15" id="Itg-ZN-hJJ"/>
+                            <constraint firstItem="eG5-jY-ANL" firstAttribute="trailing" secondItem="wzb-Tn-Oo9" secondAttribute="trailing" constant="321" id="LFE-9b-LBd"/>
+                            <constraint firstItem="eG5-jY-ANL" firstAttribute="trailing" secondItem="uQ3-D8-2U9" secondAttribute="trailing" constant="20" id="dio-CA-g0w"/>
+                            <constraint firstItem="wzb-Tn-Oo9" firstAttribute="leading" secondItem="eG5-jY-ANL" secondAttribute="leading" constant="15" id="eXL-Wb-P5m"/>
+                            <constraint firstItem="eG5-jY-ANL" firstAttribute="trailing" secondItem="cfO-w8-SvC" secondAttribute="trailing" constant="20" id="jzR-0n-HLZ"/>
+                            <constraint firstItem="cfO-w8-SvC" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="UWa-hS-7WV" secondAttribute="leading" constant="20" symbolic="YES" id="rTH-iC-TcZ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="eG5-jY-ANL"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OSN-Rl-W11" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2032.8" y="131.78410794602701"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="g1b-8M-gw0"/>
+        <segue reference="Yls-Pg-YrJ"/>
+    </inferredMetricsTieBreakers>
 </document>
