--- a/Pictation/Base.lproj/Main.storyboard
+++ b/Pictation/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eWD-oz-VB8">
-                                <rect key="frame" x="361" y="497" width="46" height="30"/>
+                                <rect key="frame" x="361.5" y="497" width="45.5" height="30"/>
                                 <state key="normal" title="Guest"/>
                                 <connections>
                                     <segue destination="XeY-gh-sji" kind="show" identifier="toLevelViewSegue" id="HRM-E0-MKU"/>
@@ -250,34 +250,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" distribution="equalSpacing" spacing="20" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FmA-4c-trw" customClass="ImageDisplay" customModule="Pictation" customModuleProvider="target">
+                            <stackView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="20" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FmA-4c-trw" customClass="ImageDisplay" customModule="Pictation" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="76" width="616" height="100"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="qvS-yH-gip"/>
+                                </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="size" keyPath="imageSize">
                                         <size key="value" width="96" height="96"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4pj-9k-MQt">
-                                <rect key="frame" x="702" y="111" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Make"/>
-                                <connections>
-                                    <action selector="makeButtonHandler:" destination="ZfP-XQ-GJu" eventType="touchUpInside" id="5tH-oL-GvJ"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="86y-63-tDy">
-                                <rect key="frame" x="692" y="191" width="56" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Restart"/>
-                                <connections>
-                                    <action selector="restartButtonHandler:" destination="ZfP-XQ-GJu" eventType="touchUpInside" id="bqg-Nz-L7I"/>
-                                </connections>
-                            </button>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="WIl-B9-Gwj">
-                                <rect key="frame" x="0.0" y="605" width="768" height="448"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="GqA-Ty-Qvm">
+                                <rect key="frame" x="682" y="76" width="60" height="100"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4pj-9k-MQt">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="f7j-si-FGt"/>
+                                        </constraints>
+                                        <state key="normal" title="Make"/>
+                                        <connections>
+                                            <action selector="makeButtonHandler:" destination="ZfP-XQ-GJu" eventType="touchUpInside" id="5tH-oL-GvJ"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="86y-63-tDy">
+                                        <rect key="frame" x="0.0" y="70" width="60" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="FJy-N8-z7U"/>
+                                        </constraints>
+                                        <state key="normal" title="Restart"/>
+                                        <connections>
+                                            <action selector="restartButtonHandler:" destination="ZfP-XQ-GJu" eventType="touchUpInside" id="bqg-Nz-L7I"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="LBC-A1-hr0"/>
+                                    <constraint firstAttribute="bottom" secondItem="86y-63-tDy" secondAttribute="bottom" id="Tnw-74-Atd"/>
+                                    <constraint firstAttribute="height" constant="100" id="bO2-pQ-jGe"/>
+                                    <constraint firstItem="4pj-9k-MQt" firstAttribute="top" secondItem="GqA-Ty-Qvm" secondAttribute="top" id="o6G-8y-Ckp"/>
+                                </constraints>
+                            </stackView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="WIl-B9-Gwj">
+                                <rect key="frame" x="0.0" y="605" width="768" height="419"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0ou-NX-zRl">
                                     <size key="itemSize" width="118" height="102"/>
@@ -324,32 +340,52 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MGU-vT-Kyh">
-                                <rect key="frame" x="20" y="184" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Pause"/>
-                                <connections>
-                                    <action selector="pauseAudioButton:" destination="ZfP-XQ-GJu" eventType="touchUpInside" id="YL6-gz-s4V"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wea-gf-kTB">
-                                <rect key="frame" x="128" y="184" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Stop"/>
-                                <connections>
-                                    <action selector="stopAudioButton:" destination="ZfP-XQ-GJu" eventType="touchUpInside" id="vQ9-u1-ETU"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CcS-tq-149">
-                                <rect key="frame" x="74" y="184" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Play"/>
-                                <connections>
-                                    <action selector="playAudioButton:" destination="ZfP-XQ-GJu" eventType="touchUpInside" id="cKL-Hy-4u3"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7dC-py-Eu8">
+                                <rect key="frame" x="20" y="184" width="140" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MGU-vT-Kyh">
+                                        <rect key="frame" x="0.0" y="0.0" width="42" height="30"/>
+                                        <state key="normal" title="Pause"/>
+                                        <connections>
+                                            <action selector="pauseAudioButton:" destination="ZfP-XQ-GJu" eventType="touchUpInside" id="YL6-gz-s4V"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CcS-tq-149">
+                                        <rect key="frame" x="60" y="0.0" width="30" height="30"/>
+                                        <state key="normal" title="Play"/>
+                                        <connections>
+                                            <action selector="playAudioButton:" destination="ZfP-XQ-GJu" eventType="touchUpInside" id="cKL-Hy-4u3"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wea-gf-kTB">
+                                        <rect key="frame" x="108" y="0.0" width="32" height="30"/>
+                                        <state key="normal" title="Stop"/>
+                                        <connections>
+                                            <action selector="stopAudioButton:" destination="ZfP-XQ-GJu" eventType="touchUpInside" id="vQ9-u1-ETU"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="2zj-RE-HY3"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="qae-EF-RuH" firstAttribute="trailing" secondItem="GqA-Ty-Qvm" secondAttribute="trailing" constant="26" id="0F4-ss-apW"/>
+                            <constraint firstItem="qae-EF-RuH" firstAttribute="trailing" secondItem="GqA-Ty-Qvm" secondAttribute="trailing" constant="26" id="1gu-O3-lW9"/>
+                            <constraint firstItem="WIl-B9-Gwj" firstAttribute="top" secondItem="FmA-4c-trw" secondAttribute="bottom" constant="429" id="2pT-TK-cop"/>
+                            <constraint firstItem="WIl-B9-Gwj" firstAttribute="leading" secondItem="qae-EF-RuH" secondAttribute="leading" id="GG2-Ct-sLn"/>
+                            <constraint firstItem="GqA-Ty-Qvm" firstAttribute="top" secondItem="qae-EF-RuH" secondAttribute="top" constant="12" id="IAC-wx-yFm"/>
+                            <constraint firstItem="FmA-4c-trw" firstAttribute="leading" secondItem="qae-EF-RuH" secondAttribute="leading" id="Ij4-X9-zLL"/>
+                            <constraint firstItem="WIl-B9-Gwj" firstAttribute="bottom" secondItem="qae-EF-RuH" secondAttribute="bottom" id="J6t-qn-x3o"/>
+                            <constraint firstItem="WIl-B9-Gwj" firstAttribute="trailing" secondItem="qae-EF-RuH" secondAttribute="trailing" id="Mmf-nB-HOz"/>
+                            <constraint firstItem="7dC-py-Eu8" firstAttribute="leading" secondItem="qae-EF-RuH" secondAttribute="leading" constant="20" id="drz-zT-f5x"/>
+                            <constraint firstItem="FmA-4c-trw" firstAttribute="top" secondItem="qae-EF-RuH" secondAttribute="top" constant="12" id="e7n-9V-C00"/>
+                            <constraint firstItem="7dC-py-Eu8" firstAttribute="top" secondItem="FmA-4c-trw" secondAttribute="bottom" constant="8" id="gTe-vZ-EpJ"/>
+                            <constraint firstItem="GqA-Ty-Qvm" firstAttribute="leading" secondItem="FmA-4c-trw" secondAttribute="trailing" constant="66" id="jBY-Kk-wMa"/>
+                            <constraint firstItem="GqA-Ty-Qvm" firstAttribute="top" secondItem="qae-EF-RuH" secondAttribute="top" constant="12" id="ssn-ww-H8y"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="qae-EF-RuH"/>
                     </view>
                     <connections>
